# hunter_dlib_ncnn

./: .gitmodules  CMakeLists.txt  README.md  convert_dlib_nets_to_caffe.cpp  dnn_metric_learning_on_images_ex.cpp
cmake/Hunter/: config.cmake
